# mood-brief

./: .env.example  .gitignore  COMMANDS.md  DEPLOYMENT.md  docker-compose.yml  test_or.py
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routes/: analyze.py  auth.py  brief.py  feedback.py  fetch_url.py  history.py  projects.py
backend/app/services/: brief_generator.py  openrouter.py  openrouter_client.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/refresh-token/: route.ts
frontend/src/app/auth/: actions.ts  layout.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/brief/[id]/: page.tsx
frontend/src/app/brief/[id]/editor/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/moodboard/: page.tsx
frontend/src/components/: Header.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/moodboard/: Form.tsx  TagList.tsx  tag-list.css
frontend/src/lib/: api.ts
frontend/src/store/: authStore.ts  projectStore.ts
nginx/: default.conf
