[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["whiteduke <zef1rflis@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.30.0,<0.42.0"
sqlalchemy = ">=2.0.47,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pydantic-settings = ">=2.13.1,<3.0.0"
python-multipart = ">=0.0.20,<0.0.23"
httpx = ">=0.28.0,<1.0.0"
fpdf2 = ">=2.8.0,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = ">=24.0.0"
isort = ">=5.13.0"

